# VoiceOverV2

./: .gitignore  README.md  pyproject.toml
src/animevoiceoverver2/: app.py  schema.sql
src/animevoiceoverver2/static/css/: style.css
src/animevoiceoverver2/templates/: add_anime.html  add_character.html  add_episode.html  add_voice_actor.html  anime_search_results.html  assign_character.html  base.html  characters.html  delete_confirmation.html  edit_anime.html  edit_character.html  edit_episode.html  edit_voice_actor.html  episode.html  episodes.html  index.html  voice_actors.html
